--- a/language-pts.cabal
+++ b/language-pts.cabal
@@ -19,6 +19,11 @@ license-file:  LICENSE
 author:        Oleg Grenrus <oleg.grenrus@iki.fi>
 maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
 
+tested-with:
+  GHC == 8.2.2
+   || == 8.4.4
+   || == 8.6.2
+
 source-repository head
   type: git
   location: https://github.com/phadej/language-pts
