--- a/language-pts.cabal
+++ b/language-pts.cabal
@@ -67,7 +67,6 @@ library
   if flag(fix)
     cpp-options: -DLANGUAGE_PTS_HAS_FIX
 
-
   build-depends:
     , base            ^>=4.10.1.0 || ^>=4.11.1.0 || ^>=4.12.0.0
     , base-compat     ^>=0.10.4
@@ -99,6 +98,9 @@ library
     Language.PTS.WHNF
 
     Language.PTS.Examples
-    Language.PTS.Examples.Bool
+    Language.PTS.Examples.Booleans
+    Language.PTS.Examples.Contexts
+    Language.PTS.Examples.Identity
+    Language.PTS.Examples.Errors
 
     Text.Show.Extras
