--- a/language-pts.cabal
+++ b/language-pts.cabal
@@ -24,6 +24,11 @@ tested-with:
    || == 8.4.4
    || == 8.6.2
 
+extra-source-files:
+  fixtures/hurkens-hol.txt
+  fixtures/hurkens-lambda-star.txt
+  fixtures/hurkens-system-u.txt
+
 source-repository head
   type: git
   location: https://github.com/phadej/language-pts
@@ -102,5 +107,21 @@ library
     Language.PTS.Examples.Contexts
     Language.PTS.Examples.Identity
     Language.PTS.Examples.Errors
+    Language.PTS.Examples.Hurkens
 
     Text.Show.Extras
+
+test-suite language-pts-golden
+  type:             exitcode-stdio-1.0
+  main-is:          Golden.hs
+
+  default-language: Haskell2010
+  hs-source-dirs:   test
+  ghc-options:      -Wall
+
+  build-depends:
+    , base
+    , language-pts
+    , tasty         ^>=1.1.0.4
+    , tasty-golden  ^>=2.3.2
+    , utf8-string   ^>=1.0.1.1
