--- a/language-pts.cabal
+++ b/language-pts.cabal
@@ -103,7 +103,7 @@ library
     Language.PTS.Bound
     Language.PTS.Check
     Language.PTS.Error
-    Language.PTS.Eval
+    -- Language.PTS.Eval
     Language.PTS.Pretty
     Language.PTS.Quote
     Language.PTS.Script
