--- a/cabal.project
+++ b/cabal.project
@@ -3,6 +3,8 @@ tests: True
 
 constraints: language-pts +nat +nat-prim
 constraints: language-pts +bool +bool-prim
+constraints: language-pts +sigma
+-- constraints: language-pts +eta
 -- constraints: language-pts +fix
 
 constraints: transformers installed
