Add Unit and Empty

--- a/cabal.project
+++ b/cabal.project
@@ -5,6 +5,7 @@ constraints: language-pts +nat +nat-prim
 constraints: language-pts +bool +bool-prim
 constraints: language-pts +sigma
 constraints: language-pts +eq
+constraints: language-pts +prop
 -- constraints: language-pts +eta
 -- constraints: language-pts +fix
 
