--- a/cabal.project
+++ b/cabal.project
@@ -6,8 +6,7 @@ constraints: language-pts +bool +bool-prim
 constraints: language-pts +sigma
 constraints: language-pts +eq
 constraints: language-pts +prop
--- constraints: language-pts +eta
--- constraints: language-pts +fix
+constraints: language-pts +quarks
 
 constraints: transformers installed
 
