--- a/language-pts.cabal
+++ b/language-pts.cabal
@@ -75,6 +75,11 @@ flag quarks
   manual:  True
   default: False
 
+flag fixed-point
+  description: Add fixed point.
+  manual:  True
+  default: False
+
 library
   default-language: Haskell2010
   hs-source-dirs:   src
@@ -103,6 +108,9 @@ library
 
   if flag(quarks)
     cpp-options: -DLANGUAGE_PTS_HAS_QUARKS
+
+  if flag(fixed-point)
+    cpp-options: -DLANGUAGE_PTS_HAS_FIXED_POINT
 
   build-depends:
     , base            ^>=4.10.1.0 || ^>=4.11.1.0 || ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0
