--- a/cabal.project
+++ b/cabal.project
@@ -1,12 +1,12 @@
 packages: .
 tests: True
 
-constraints: language-pts +nat +nat-prim
-constraints: language-pts +bool +bool-prim
-constraints: language-pts +sigma
-constraints: language-pts +eq
-constraints: language-pts +prop
-constraints: language-pts +quarks
+-- constraints: language-pts +nat +nat-prim
+-- constraints: language-pts +bool +bool-prim
+-- constraints: language-pts +sigma
+-- constraints: language-pts +eq
+-- constraints: language-pts +prop
+-- constraints: language-pts +quarks
 
 constraints: transformers installed
 
